demo/external-name-service.yaml
# 没有selector, 没有endpoint
# 实际为CNAME的效果
kind: Service
apiVersion: v1
metadata:
  name: my-service
  namespace: prod
spec:
  type: ExternalName
  externalName: my.database.example.com
