demo/nodeport-service.yaml
# 直接映射到每一个宿主机端口
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
    type: NodePort
    selector:
      app: MyApp
    ports:
      - name: http
        port: 80
        nodePort: 80
