demo/simple-service.yaml
# 最基本的service
# 会根据 selector 对应生成一个名称为 metadata.name 的endpoint
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
